@@ -100,6 +100,12 @@ In: @event_title@<ep:ifset name="event_dates">, @event_dates</ep:ifset><ep:ifset
     <ep:citation type="user_admin"><ep:linkhere><span class="namecitation"><ep:ifset name="name">@name@</ep:ifset><ep:ifnotset name="name">No name, email=@email@</ep:ifnotset></span></ep:linkhere></ep:citation>
 
     <ep:citation type="user_editor"><ep:linkhere><span class="namecitation"><ep:ifset name="name">@name@</ep:ifset><ep:ifnotset name="name">No name, email=@email@</ep:ifnotset></span></ep:linkhere></ep:citation>
+<!-- user citations -->
+    <ep:citation type="user"><ep:linkhere><ep:ifset name="name">@name@</ep:ifset><ep:ifnotset name="name">User @username@</ep:ifnotset></ep:linkhere></ep:citation>
+
+    <ep:citation type="user_admin"><ep:linkhere><span class="namecitation"><ep:ifset name="name">@name@</ep:ifset><ep:ifnotset name="name">No name, email=@email@</ep:ifnotset></span></ep:linkhere></ep:citation>
+
+    <ep:citation type="user_editor"><ep:linkhere><span class="namecitation"><ep:ifset name="name">@name@</ep:ifset><ep:ifnotset name="name">No name, email=@email@</ep:ifnotset></span></ep:linkhere></ep:citation>
 
     <ep:citation type="user_user"><ep:linkhere><span class="namecitation"><ep:ifset name="name">@name@</ep:ifset><ep:ifnotset name="name">No name, email=@email@</ep:ifnotset></span></ep:linkhere></ep:citation>
 
