@@ -110,12 +110,13 @@ foreach( @esets )
 			$session->make_text( $num_eprints{$_} ) ) );
 }
 
-$table = $session->make_element( "table", border=>"0" );
-$html->appendChild( $session->html_phrase( "cgi/users/status:diskspace" ) );
-$html->appendChild( $table );
 
 unless( $EPrints::SystemSettings::conf->{disable_df} )
 {
+	$table = $session->make_element( "table", border=>"0" );
+	$html->appendChild( $session->html_phrase( "cgi/users/status:diskspace" ) );
+	$html->appendChild( $table );
+
 	my $best_size = 0;
 
 	my @dirs = $session->get_archive()->get_store_dirs();
